--- a/bit-dome.html
+++ b/bit-dome.html
@@ -3,7 +3,9 @@
 </head>
 
 <body>
+</body>
 
+<template name="ApplicationLayout">
   <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
       <div class="navbar-header">
@@ -17,13 +19,25 @@
       </div>
       <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
-          <li class="active"><a href="#">Home</a></li>
-          <li><a href="#about">About</a></li>
+          {{> navItems}}
         </ul>
       </div><!--/.nav-collapse -->
     </div>
   </nav>
 
+  {{> yield}}
+</template>
+
+<template name="navItems">
+  <li class="{{ activeIfTemplateIs 'Home' }}">
+    <a href="{{ pathFor 'home'}}">Home</a>
+  </li>
+  <li class="{{ activeIfTemplateIs 'About' }}">
+    <a href="{{ pathFor 'about'}}">About</a>
+  </li>
+</template>
+
+<template name="Home">
   <div class="container theme-showcase" role="main">
 
     <!-- Main jumbotron for a primary marketing message or call to action -->
@@ -55,8 +69,18 @@
     </div>
 
   </div> <!-- /container -->
+</template>
 
-</body>
+<template name="About">
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12">
+        <h2>Bit Dome</h2>
+        <p>A HackPSU Spring 2015 project.</p>
+      </div>
+    </div>
+  </div> <!-- /container -->
+</template>
 
 <template name="hello">
   <button>Click Me</button>
