--- a/bit-dome.html
+++ b/bit-dome.html
@@ -64,11 +64,11 @@
       <div class="col-lg-4">
         <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
         <h2>Charitable Winnings</h2>
-        <p>All house winnings go to chartiy. What is there to lose?</p>
+        <p>All house winnings go to charity*. What is there to lose?</p>
       </div>
       <div class="col-lg-4">
         <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-        <h2>You still win</h2>
+        <h2>Win-Win!</h2>
         <p>What's yours is yours- anything you win you get to keep.</p>
       </div>
       <div class="col-lg-4">
