--- a/bit-dome.html
+++ b/bit-dome.html
@@ -15,7 +15,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">Bit Dome</a>
+        <a class="navbar-brand" href="/">Bit Dome</a>
       </div>
       <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
