--- a/bit-dome.html
+++ b/bit-dome.html
@@ -21,7 +21,7 @@
         <ul class="nav navbar-nav">
           {{> navItems}}
         </ul>
-        <ul class="navbar-form navbar-right">
+        <ul class="nav navbar-nav navbar-right">
           {{> userInfo}}
         </ul>
       </div><!--/.nav-collapse -->
@@ -38,13 +38,18 @@
   <li class="{{ activeIfTemplateIs 'About' }}">
     <a href="{{ pathFor 'about'}}">About</a>
   </li>
+  <li class="{{ activeIfTemplateIs 'Play' }}">
+    <a href="{{ pathFor 'play'}}">Play</a>
+  </li>
 </template>
 
 <template name="userInfo">
-  <p>
-    <strong>20</strong> Credits
-    <strong>$19</strong> Donated to Charity
-  </p>
+  <li>
+    <a><strong>4720</strong> Credits</a>
+  </li>
+  <li>
+    <a><strong>$219</strong> Donated to Charity</a>
+  </li>
 </template>
 
 <template name="Home">
@@ -87,6 +92,44 @@
       <div class="col-xs-12">
         <h2>Bit Dome</h2>
         <p>A HackPSU Spring 2015 project.</p>
+      </div>
+    </div>
+  </div> <!-- /container -->
+</template>
+
+<template name="Play">
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12">
+        <h2>Choose a game</h2>
+        <ul>
+          <li>
+            <a href="/play/blackjack">Blackjack</a>
+          </li>
+          <li>
+            <a href="/play/slots">Slots</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div> <!-- /container -->
+</template>
+
+<template name="Playblackjack">
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12">
+        <h1>Blackjack!</h1>
+      </div>
+    </div>
+  </div> <!-- /container -->
+</template>
+
+<template name="Playslots">
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12">
+        <h1>Slots!</h1>
       </div>
     </div>
   </div> <!-- /container -->
