Added button styling to demo click button

--- a/bit-dome.html
+++ b/bit-dome.html
@@ -182,6 +182,6 @@
 </template>
 
 <template name="hello">
-  <button>Click Me</button>
+  <button class="btn btn-primary btn-lg">Click Me</button>
   <p>You've pressed the button {{counter}} times.</p>
 </template>
