--- a/bit-dome.html
+++ b/bit-dome.html
@@ -143,7 +143,8 @@
         <h3>Players:</h3>
         <ul>
           {{#each game.players}}
-            <li>Player: {{game}}</li>
+            <li>Account ID: {{accountId}}</li>
+            <li>Hand Card Count: {{cards.length}}</li>
           {{/each}}
         </ul>
         <h3>Dealer Cards:</h3>
