Implemented manual shuffle button

--- a/bit-dome.html
+++ b/bit-dome.html
@@ -170,6 +170,11 @@
         </ul>
       </div>
     </div>
+    <div class="row">
+      <div class="well col-xs-12">
+        <button class="btn btn-info">Shuffle</button>
+      </div>
+    </div>
   </div> <!-- /container -->
 </template>
 
