--- a/bit-dome.html
+++ b/bit-dome.html
@@ -159,11 +159,12 @@
           {{/each}}
         </ul>
         <h3>Deck:</h3>
-        <ul>
+        <p>{{game.deck.cards.length}} Cards</p>
+        <!-- <ul>
           {{#each game.deck.cards}}
             {{> card}}
           {{/each}}
-        </ul>
+        </ul> -->
       </div>
     </div>
     <div class="row">
@@ -190,10 +191,6 @@
 
 <template name="card">
   <li>Card:<ul>
-    <li>Suit: {{suit}}</li>
-    <li>Suit: {{getHumanSuit}}</li>
-    <li>Value: {{value}}</li>
-    <li>FaceUp: {{faceUp}}</li>
     <img src="{{getImagePath}}" />
   </ul></li>
 </template>
