Added basic hit & stand buttons

--- a/bit-dome.html
+++ b/bit-dome.html
@@ -171,8 +171,8 @@
       <div class="well col-xs-12">
         <button class="btn btn-info shuffle">Shuffle</button>
         <button class="btn btn-info deal">Deal</button>
-        <button class="btn">Hit</button>
-        <button class="btn">Stay</button>
+        <button class="btn btn-info hit">Hit</button>
+        <button class="btn btn-info stand">Stand</button>
         <button class="btn">Bet</button>
       </div>
     </div>
