--- a/bit-dome.html
+++ b/bit-dome.html
@@ -166,13 +166,7 @@
             {{> card}}
           {{/each}}
         </ul>
-        <h3>Deck:</h3>
-        <p>{{game.deck.cards.length}} Cards</p>
-        <!-- <ul class="cards">
-          {{#each game.deck.cards}}
-            {{> card}}
-          {{/each}}
-        </ul> -->
+        <p><small><i>Deck has {{game.deck.cards.length}} cards</i></small></p>
       </div>
     </div>
     <div class="row">
