--- a/bit-dome.html
+++ b/bit-dome.html
@@ -142,8 +142,7 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
-        <h1>Blackjack!</h1>
-        <h3>Game name: {{game.name}}</h3>
+        <h1>Blackjack <small>{{game.name}}</small></h1>
         <h3>Players:</h3>
         <ul>
           {{#each game.players}}
