--- a/bit-dome.html
+++ b/bit-dome.html
@@ -135,6 +135,10 @@
 </template>
 
 <template name="Playblackjack">
+<audio autoplay loop>
+  <source src="/blackjack.ogg" type="audio/ogg">
+  <source src="/blackjack.mp3" type="audio/mpeg">
+</audio> 
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
@@ -191,6 +195,11 @@
     <div class="row">
       <div class="col-xs-12">
         <h1>Slots!</h1>
+        <img src="/Slots-Rollin.gif">
+        <audio autoplay loop>
+          <source src="/Slots Sound/slotsroll.ogg" type="audio/ogg">
+          <source src="/Slots Sound/slotsroll.mp3" type="audio/mpeg">
+        </audio> 
       </div>
     </div>
   </div> <!-- /container -->
